server public IP change exception catch